[package]
name = "miller"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13"
miller-engine = { version = "0.1", path = "miller-engine" }

[workspace]
members = [ "miller-engine", "zengarden-raw" ]
