[package]
name = "miller-engine"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zengarden-raw = { version = "0.1", path = "../zengarden-raw" }
