[package]
name = "zengarden-raw"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.57"
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"
